--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,12 +26,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Chocolatey Action
+        # You may pin to the exact commit or the version.
+        # uses: crazy-max/ghaction-chocolatey@5a5864861ce2c988001531e48993aa687c51f6c8
+        uses: crazy-max/ghaction-chocolatey@v2.2.0
+        with:
+          # Arguments to pass to Chocolatey
+          args: pack -version 1.0.0
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
