--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,22 +25,24 @@ jobs:
     
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0
+        with:
+          versionSpec: '5.x'
+
+      - name: Determine Version
+        uses: gittools/actions/gitversion/execute@v0
+    
       - name: Chocolatey Action
         # You may pin to the exact commit or the version.
         # uses: crazy-max/ghaction-chocolatey@5a5864861ce2c988001531e48993aa687c51f6c8
         uses: crazy-max/ghaction-chocolatey@v2.2.0
         with:
           # Arguments to pass to Chocolatey
-          args: pack -version 1.0.0
-
-      - name: GitVersion action
-        # You may pin to the exact commit or the version.
-        # uses: nmcc/actions-gitversion@4ab384d333506ede37c82ca3e03f4005b18b7573
-        uses: nmcc/actions-gitversion@v1
-        with:
-          # Path to the gitversion executable
-          path-to-gitversion: packages/GitVersion.CommandLine/tools/GitVersion.exe
+          args: pack -version ${{ steps.gitversion.outputs.nuGetVersion }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
